# cardano-wallet

./: cabal.project  stack.yaml  weeder.dhall
.buildkite/: rebuild.hs
.github/workflows/: windows.yml
lib/base/: cardano-wallet-base.cabal
lib/base/src/Cardano/Wallet/: Base.hs  Compat.hs  Prelude.hs  Startup.hs
lib/base/test/Cardano/Wallet/: BaseSpec.hs  StartupSpec.hs
lib/cli/: cardano-wallet-cli.cabal
lib/cli/src/Cardano/: CLI.hs
lib/cli/test/unit/Cardano/: CLISpec.hs
lib/core/: cardano-wallet-core.cabal
lib/core-integration/: cardano-wallet-core-integration.cabal
lib/core-integration/src/Cardano/Wallet/: BenchShared.hs  LatencyBenchShared.hs
lib/core-integration/src/Test/Integration/: Faucet.hs
lib/core-integration/src/Test/Integration/Framework/: Context.hs  DSL.hs  Request.hs  TestData.hs
lib/core-integration/src/Test/Integration/Scenario/CLI/: Port.hs
lib/core/src/Cardano/: Wallet.hs
lib/core/src/Cardano/Byron/Codec/: Cbor.hs
lib/core/src/Cardano/DB/: Sqlite.hs
lib/core/src/Cardano/DB/Sqlite/: Delete.hs
lib/core/src/Cardano/Pool/: DB.hs  Metadata.hs
lib/core/src/Cardano/Pool/DB/: Log.hs  Sqlite.hs
lib/core/src/Cardano/Pool/DB/Sqlite/: TH.hs
lib/core/src/Cardano/Wallet/: Api.hs  DB.hs  Logging.hs  Network.hs  Orphans.hs  Prelude.hs  Registry.hs  TokenMetadata.hs  Transaction.hs  Unsafe.hs  Util.hs  Version.hs
lib/core/src/Cardano/Wallet/Api/: Client.hs  Link.hs  Server.hs  Types.hs
lib/core/src/Cardano/Wallet/DB/: MVar.hs  Model.hs  Sqlite.hs
lib/core/src/Cardano/Wallet/DB/Sqlite/: TH.hs  Types.hs
lib/core/src/Cardano/Wallet/Network/: Client.hs  Ports.hs
lib/core/src/Cardano/Wallet/Primitive/: AddressDerivation.hs  AddressDiscovery.hs  CoinSelection.hs  Migration.hs  Model.hs  Slotting.hs  SyncProgress.hs  Types.hs
lib/core/src/Cardano/Wallet/Primitive/AddressDerivation/: Byron.hs  Icarus.hs  MintBurn.hs  SharedKey.hs  Shelley.hs
lib/core/src/Cardano/Wallet/Primitive/AddressDiscovery/: Random.hs  Sequential.hs  Shared.hs
lib/core/src/Cardano/Wallet/Primitive/CoinSelection/: Balance.hs  MultiAsset.hs
lib/core/src/Cardano/Wallet/Primitive/Delegation/: State.hs  UTxO.hs
lib/core/src/Cardano/Wallet/Primitive/Migration/: Planning.hs  Selection.hs
lib/core/src/Cardano/Wallet/Primitive/Types/: Address.hs  Coin.hs  Hash.hs  RewardAccount.hs  TokenBundle.hs  TokenMap.hs  TokenPolicy.hs  TokenQuantity.hs  Tx.hs  UTxO.hs  UTxOIndex.hs
lib/core/src/Data/: Quantity.hs
lib/core/src/Data/Map/NonEmpty/: Strict.hs
lib/core/src/Data/Map/NonEmpty/Strict/: Internal.hs
lib/core/src/Data/Time/: Text.hs
lib/core/src/Data/Vector/: Shuffle.hs
lib/core/src/Network/: Ntp.hs
lib/core/src/Network/Wai/Middleware/: Logging.hs  ServerError.hs
lib/core/src/Ouroboros/Network/Client/: Wallet.hs
lib/core/test/bench/db/: Main.hs
lib/core/test/data/Cardano/Wallet/Api/: ApiBalanceTransactionPostDataTestnet0.json  ApiConstructTransactionTestnet0.json  ApiStakePool.json  ApiStakePoolMetrics.json
lib/core/test/shared/Cardano/Wallet/: Gen.hs
lib/core/test/unit/: Main.hs
lib/core/test/unit/Cardano/: WalletSpec.hs
lib/core/test/unit/Cardano/Byron/Codec/: CborSpec.hs
lib/core/test/unit/Cardano/DB/Sqlite/: DeleteSpec.hs
lib/core/test/unit/Cardano/Pool/DB/: Arbitrary.hs  SqliteSpec.hs
lib/core/test/unit/Cardano/Wallet/: ApiSpec.hs  NetworkSpec.hs  RegistrySpec.hs  TokenMetadataSpec.hs  TransactionSpec.hs
lib/core/test/unit/Cardano/Wallet/Api/: Malformed.hs  ServerSpec.hs  TypesSpec.hs
lib/core/test/unit/Cardano/Wallet/DB/: Arbitrary.hs  Properties.hs  SqliteSpec.hs  StateMachine.hs
lib/core/test/unit/Cardano/Wallet/Primitive/: FeeSpec.hs  MigrationSpec.hs  ModelSpec.hs  SlottingSpec.hs  TypesSpec.hs
lib/core/test/unit/Data/: QuantitySpec.hs
lib/core/test/unit/Data/Time/: TextSpec.hs
lib/dbvar/src/Data/: Chain.hs  Delta.hs  Table.hs
lib/dbvar/src/Demo/: Database.hs
lib/jormungandr/src/Cardano/Wallet/Jormungandr/: Transaction.hs
lib/launcher/: cardano-wallet-launcher.cabal
lib/launcher/src/Cardano/: Launcher.hs  Startup.hs
lib/launcher/src/Cardano/Launcher/: Node.hs
lib/launcher/src/Cardano/Startup/: POSIX.hs  Windows.hs
lib/launcher/test/unit/Cardano/: LauncherSpec.hs  StartupSpec.hs
lib/numeric/: cardano-wallet-numeric.cabal
lib/shelley/: cardano-wallet.cabal
lib/shelley/bench/: Latency.hs  Restore.hs
lib/shelley/exe/: cardano-wallet.hs  local-cluster.hs  mock-token-metadata-server.hs
lib/shelley/src/Cardano/Wallet/: Shelley.hs
lib/shelley/src/Cardano/Wallet/Byron/: Compatibility.hs
lib/shelley/src/Cardano/Wallet/Shelley/: Compatibility.hs  Launch.hs  Network.hs  Pools.hs  Transaction.hs
lib/shelley/src/Cardano/Wallet/Shelley/Api/: Server.hs
lib/shelley/src/Cardano/Wallet/Shelley/Compatibility/: Ledger.hs
lib/shelley/src/Cardano/Wallet/Shelley/Launch/: Cluster.hs
lib/shelley/test/data/cardano-node-shelley/: node.config
lib/shelley/test/integration/: Main.hs
lib/shelley/test/unit/: Main.hs
lib/shelley/test/unit/Cardano/Wallet/Shelley/: CompatibilitySpec.hs  NetworkSpec.hs  TransactionSpec.hs
lib/shelley/test/unit/Cardano/Wallet/Shelley/Compatibility/: LedgerSpec.hs
lib/strict-non-empty-containers/: strict-non-empty-containers.cabal
lib/test-utils/: cardano-wallet-test-utils.cabal
lib/test-utils/src/Test/Hspec/: Extra.hs
lib/test-utils/src/Test/QuickCheck/: Extra.hs
lib/test-utils/src/Test/Utils/: FilePath.hs  Laws.hs  Paths.hs  Platform.hs  Pretty.hs  Resource.hs  Roundtrip.hs  Startup.hs  StaticServer.hs  Time.hs  Trace.hs
lib/test-utils/src/Test/Utils/Laws/: PartialOrd.hs
lib/test-utils/test/Test/Hspec/: ExtraSpec.hs
lib/text-class/: cardano-wallet-text-class.cabal
nix/: cabal-shell.nix  haskell.nix  sources.json
nix/.stack.nix/: cardano-wallet-base.nix  cardano-wallet-cli.nix  cardano-wallet-core-integration.nix  cardano-wallet-core.nix  cardano-wallet-launcher.nix  cardano-wallet-numeric.nix  cardano-wallet-test-utils.nix  cardano-wallet-text-class.nix  cardano-wallet.nix  dbvar.nix  default.nix
specifications/api/: swagger.yaml
(+48 files in other folders)
