cabal-version:       3.0
name:                cardano-wallet
version:             2021.7.30
synopsis:            Wallet backend protocol-specific bits implemented using Shelley nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018-2021 IOHK
license:             Apache-2.0
category:            Web
build-type:          Simple

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

common base
  build-depends: base >= 4.14 && < 4.15
               , cardano-wallet-base

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Wunused-packages

  if (flag(release))
    ghc-options:       -O2 -Werror

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

library
  import: base, project-config
  build-depends:
      cardano-wallet-base
    , aeson
    , base58-bytestring
    , bech32
    , bech32-th
    , binary
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-wallet-launcher
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley-ma
    , cardano-ledger-alonzo
    , cardano-slotting
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cardano-wallet-test-utils
    , cborg
    , containers
    , contra-tracer
    , directory
    , extra
    , filepath
    , fmt
    , generic-lens
    , io-classes
    , iohk-monitoring
    , memory
    , network
    , network-mux
    , network-uri
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , random
    , retry
    , servant-server
    , shelley-spec-ledger
    , strict-non-empty-containers
    , temporary
    , text
    , cardano-wallet-text-class
    , time
    , transformers
    , typed-process
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    , warp
    , yaml
    , Win32-network
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Byron.Compatibility
      Cardano.Wallet.Shelley
      Cardano.Wallet.Shelley.Api.Server
      Cardano.Wallet.Shelley.Compatibility
      Cardano.Wallet.Shelley.Compatibility.Ledger
      Cardano.Wallet.Shelley.Network
      Cardano.Wallet.Shelley.Transaction
      Cardano.Wallet.Shelley.Launch
      Cardano.Wallet.Shelley.Launch.Cluster
      Cardano.Wallet.Shelley.Pools

executable cardano-wallet
  import: base, project-config, exe
  build-depends:
      cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-launcher
    , cardano-wallet
    , contra-tracer
    , iohk-monitoring
    , lobemo-backend-ekg
    , network-uri
    , optparse-applicative
    , text
    , cardano-wallet-text-class
    , transformers
    , unliftio
  hs-source-dirs:
      exe
  main-is:
    cardano-wallet.hs

executable local-cluster
  import: base, project-config, exe
  build-depends:
      cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet
    , contra-tracer
    , iohk-monitoring
    , directory
    , filepath
    , lobemo-backend-ekg
    , text
    , cardano-wallet-text-class
  hs-source-dirs:
      exe
  main-is:
      local-cluster.hs

executable mock-token-metadata-server
  import: base, project-config, exe
  build-depends:
      ansi-wl-pprint
    , cardano-wallet-core
    , optparse-applicative
    , wai-extra
  hs-source-dirs:
      exe
  main-is:
     mock-token-metadata-server.hs

test-suite unit
  import: base, project-config, exe
  build-depends:
      cardano-wallet-core:test-bench-shared
    , base58-bytestring
    , bech32
    , bech32-th
    , bytestring
    , cardano-addresses
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-wallet
    , cardano-wallet-core
    , cardano-wallet-test-utils
    , containers
    , contra-tracer
    , fmt
    , hspec-core
    , iohk-monitoring
    , hspec
    , hspec-core
    , memory
    , optparse-applicative
    , ouroboros-network
    , shelley-spec-ledger
    , text
    , cardano-wallet-text-class
    , transformers
    , unliftio
    , QuickCheck
  build-tool-depends:
      hspec-discover:hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Cardano.Wallet.Shelley.CompatibilitySpec
      Cardano.Wallet.Shelley.Compatibility.LedgerSpec
      Cardano.Wallet.Shelley.LaunchSpec
      Cardano.Wallet.Shelley.NetworkSpec
      Cardano.Wallet.Shelley.TransactionSpec
      Spec

library faucet
  import: base, project-config
  build-depends:
      cardano-wallet-core
    , cardano-wallet-core-integration
    , aeson
    , bytestring
    , cardano-addresses
    , cardano-api
    , unliftio
  hs-source-dirs:
      test/faucet
  exposed-modules:
      Cardano.Wallet.Shelley.Faucet

test-suite integration
  import: base, project-config, exe
  build-depends:
      cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet-launcher
    , cardano-wallet
    , cardano-wallet:faucet
    , cardano-wallet-test-utils
    , contra-tracer
    , directory
    , either
    , filepath
    , hspec-core
    , http-client
    , iohk-monitoring
    , lobemo-backend-ekg
    , network-uri
    , text
    , cardano-wallet-text-class
    , unliftio
  build-tool-depends:
      cardano-wallet:cardano-wallet
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/integration
  main-is:
      Main.hs

benchmark restore
  import: base, project-config, exe
  build-depends:
      aeson
    , bytestring
    , cardano-addresses
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet
    , contra-tracer
    , deepseq
    , filepath
    , fmt
    , iohk-monitoring
    , say
    , text
    , cardano-wallet-text-class
    , time
    , transformers
    , unliftio
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Restore.hs

benchmark latency
  import: base, project-config, exe
  build-depends:
      aeson
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-core-integration
    , cardano-wallet
    , cardano-wallet:faucet
    , cardano-wallet-launcher
    , directory
    , filepath
    , generic-lens
    , hspec
    , http-client
    , http-types
    , iohk-monitoring
    , text
    , unliftio
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Latency.hs
